<?xml version="1.0"?>
<package format="2">
  <name>my_robot_controller</name>
  <version>0.0.1</version>
  <description>My first ROS package</description>
  <author email="sergioandresbolanospenagos@gmail.com">Sergio Bolaños</author>
  <maintainer email="sergioandresbolanospenagos@gmail.com">Sergio Bolaños</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
